--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Criando CRUD de Qualidade",
   "main": "crud.js",
   "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "start:crud": "npx ts-node crud.ts",
-    "dev:crud": "nodemon --ext ts,tsx --exec \"npm run start:crud\"", 
+    "dev:crud": "nodemon --ext ts,tsx --exec \"npm run start:crud\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,9 +17,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.3.2",
+    "@types/react": "18.2.14",
+    "@types/uuid": "^9.0.2",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "typescript": "^5.1.3"
+    "next": "^13.4.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.1.3",
+    "uuid": "^9.0.0"
   }
 }
